app/javascript/flavours/polyam/styles/components/columns.scss
/* ... */
.tabs-bar__wrapper {
  background: var(--background-color);
  backdrop-filter: $backdrop-blur-filter;
  position: sticky;
  top: 0;
  z-index: 2;
  padding-top: 0;

  @media screen and (min-width: $no-gap-breakpoint) {
    padding-top: 10px;
  }
}

.column {
  width: 350px;
  position: relative;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;

  > .scrollable {
    border: 1px solid var(--background-border-color);
    border-top: 0;
    border-radius: 0 0 4px 4px;

    &.about,
    &.privacy-policy {
      border-top: 1px solid var(--background-border-color);
      border-radius: 4px;

      @media screen and (max-width: $no-gap-breakpoint) {
        border-top: 0;
        border-bottom: 0;
      }
    }
  }
}

.column__alert {
  position: sticky;
  bottom: 0;
  z-index: 10;
  box-sizing: border-box;
  display: grid;
  width: 100%;
  max-width: 360px;
  padding: 1rem;
  margin: auto auto 0;
  overflow: clip;

  &:empty {
    padding: 0;
  }

  @media (max-width: #{$mobile-menu-breakpoint - 1}) {
    // Compensate for mobile menubar
    bottom: var(--mobile-bottom-nav-height);
  }

  & > * {
    // Make all nested alerts occupy the same space
    // rather than stack
    grid-area: 1 / 1;
  }
}

.ui {
  --mobile-bottom-nav-height: 55px;
  --last-content-item-border-width: 2px;

  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  @media (max-width: #{$mobile-menu-breakpoint - 1}) {
    padding-bottom: calc(
      var(--mobile-bottom-nav-height) - var(--last-content-item-border-width)
    );
  }
}

// Polyam: Split from .column, .drawer
.column {
  @include column-drawer;
}

// .columns-area--mobile (Moved to single-column.scss by upstream)

.column-link--transparent .icon-with-badge__badge {
  border-color: var(--background-color);
}

.column-title {
  text-align: center;
  padding-bottom: 32px;

  h3 {
    font-size: 24px;
    line-height: 1.5;
    font-weight: 700;
    margin-bottom: 10px;
  }

  p {
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    color: $darker-text-color;
  }

  @media screen and (width >= 600px) {
    padding: 40px;
  }
}

.column-back-button {
  box-sizing: border-box;
  width: 100%;
  background: transparent;
  border: 1px solid var(--background-border-color);
  border-radius: 4px 4px 0 0;
  color: $highlight-text-color;
  cursor: pointer;
  flex: 0 0 auto;
  font-size: 16px;
  line-height: inherit;
  text-align: unset;
  padding: 13px;
  margin: 0;
  z-index: 3;
  outline: 0;
  display: flex;
  align-items: center;
  gap: 5px;

  &:hover {
    text-decoration: underline;
  }
}

.column-header__back-button {
  display: flex;
  align-items: center;
  gap: 5px;
  background: transparent;
  border: 0;
  font-family: inherit;
  color: $highlight-text-color;
  cursor: pointer;
  white-space: nowrap;
  font-size: 16px;
  padding: 13px;
  z-index: 3;

  &:hover {
    text-decoration: underline;
  }

  &.compact {
    padding-inline-end: 5px;
    flex: 0 0 auto;
  }
}

.follow_requests-unlocked_explanation,
.switch-to-advanced {
  color: $light-text-color;
  background-color: $ui-base-color;
  padding: 15px;
  border-radius: 4px;
  margin-top: 4px;
  margin-bottom: 12px;
  font-size: 13px;
  line-height: 18px;

  a {
    color: $ui-button-tertiary-color;
    font-weight: bold;
  }
}

.column-link {
  display: flex;
  align-items: center;
  gap: 8px;
  width: 100%;
  padding: 12px;
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  color: $secondary-text-color;
  background: transparent;
  border: 0;
  border-left: 4px solid transparent;
  box-sizing: border-box;

  &:hover,
  &:focus,
  &:active {
    color: $primary-text-color;
  }

  &.active {
    color: $highlight-text-color;
  }

  &:focus {
    outline: 0;
  }

  &:focus-visible {
    border-color: $ui-button-focus-outline-color;
    border-radius: 0;
  }

  &--logo {
    background: transparent;
    padding: 10px;

    &:hover,
    &:focus,
    &:active {
      background: transparent;
    }
  }
}

.column-link__badge {
  display: inline-block;
  border-radius: 4px;
  font-size: 12px;
  line-height: 19px;
  font-weight: 500;
  background: $ui-base-color;
  padding: 4px 8px;
  margin: -6px 10px;
}

.column-subheading {
  background: var(--surface-background-color);
  color: $darker-text-color;
  padding: 8px 20px;
  font-size: 12px;
  font-weight: 500;
  text-transform: uppercase;
  cursor: default;
}

.column-header__wrapper {
  position: relative;
  flex: 0 0 auto;
  z-index: 1;

  &.active {
    box-shadow: 0 1px 0 color.change($highlight-text-color, $alpha: 0.3);

    &::before {
      display: block;
      content: '';
      position: absolute;
      bottom: -13px;
      inset-inline-start: 0;
      inset-inline-end: 0;
      margin: 0 auto;
      width: 60%;
      pointer-events: none;
      height: 28px;
      z-index: 1;
      background: radial-gradient(
        ellipse,
        color.change($ui-highlight-color, $alpha: 0.23) 0%,
        color.change($ui-highlight-color, $alpha: 0) 60%
      );
    }
  }

  .announcements {
    z-index: 1;
    position: relative;
  }
}

.column-header__select-row {
  border-width: 0 1px 1px;
  border-style: solid;
  border-color: var(--background-border-color);
  padding: 15px;
  display: flex;
  align-items: center;
  gap: 8px;

  &__checkbox .check-box {
    display: flex;
  }

  &__select-menu:disabled {
    visibility: hidden;
  }

  &__mode-button {
    margin-left: auto;
    color: $highlight-text-color;
    font-weight: bold;
    font-size: 14px;

    &:hover {
      color: lighten($highlight-text-color, 6%);
    }
  }
}
/* ... */

